--- a/index.html
+++ b/index.html
@@ -5,11 +5,25 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lowrimore, William | Portfolio | Web | Full Stack | Developer</title>
-  <a rel= "stylesheet" href= "assets/css/style.css" />
+  <link rel= "stylesheet" href= "./assets/css/style.css"/>
 </head>
 <body>
   <header>
     <h1>William Lowrimore</h1>
+    <nav>
+      <!-- Unordered list element -->
+      <ul>
+        <li>
+          <a href= "#about-me">About Me</a>
+        </li>
+        <li>
+          <a href= "#my-work">Applications</a>
+        </li>
+        <li>
+          <a href= "contact-me">Contact Me</a>
+        </li>
+      </ul>
+    </nav>
   </header>
 </body>
 </html>
