--- a/index.html
+++ b/index.html
@@ -10,20 +10,35 @@
 <body>
   <header>
     <h1>William Lowrimore</h1>
-    <nav>
-      <!-- Unordered list element -->
-      <ul>
-        <li>
-          <a href= "#about-me">About Me</a>
-        </li>
-        <li>
-          <a href= "#my-work">Applications</a>
-        </li>
-        <li>
-          <a href= "contact-me">Contact Me</a>
-        </li>
-      </ul>
-    </nav>
+    <div id= "header-column-right">
+      <nav>
+      
+        <!-- Unordered list element -->
+        <ul>
+          <li>
+            <a href= "#about-me">About Me</a>
+          </li>
+          <li>
+            <a href= "#my-work">Applications</a>
+          </li>
+          <li>
+            <a href= "contact-me">Contact Me</a>
+          </li>
+        </ul>
+      </nav>
+      <h2>My Journey to Success</h2>
+      <p>Developing the Mind of a Developer</p>
+      
+    </div>
   </header>
+
+  <!-- hero/jumbotron -->
+  <figure>
+    <!-- <img src= "./assets/images/hero.jpg"> alt= ""> -->
+  </figure>
+
+  <section>
+
+  </section>
 </body>
 </html>
