started about me

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <h1>William Lowrimore</h1>
-    <div id= "header-column-right">
+    <div>
       <nav>
       
         <!-- Unordered list element -->
@@ -26,7 +26,7 @@
           </li>
         </ul>
       </nav>
-      <h2>My Journey to Success</h2>
+      <h2>A Journey to Success</h2>
       <p>Developing the Mind of a Developer</p>
       
     </div>
@@ -37,8 +37,16 @@
     <!-- <img src= "./assets/images/hero.jpg"> alt= ""> -->
   </figure>
 
-  <section>
-
+  <section class= "bio-box">
+    <h1 id= "about-me">About Me</h1>
+    <div>
+      <article class= "bio">
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quisquam eligendi 
+          omnis rem molestias alias accusantium consequuntur esse ea similique laudantium 
+          fuga, repudiandae magnam minus velit et, officia dolore earum debitis?
+        </p>  
+      </article>
+    </div>
   </section>
 </body>
 </html>
