build basic 'about me' section

--- a/index.html
+++ b/index.html
@@ -38,14 +38,16 @@
   </figure>
 
   <section class= "bio-box">
-    <h1 id= "about-me">About Me</h1>
-    <div>
+    <div class= "flex-row">
+      <h1 id= "about-me">About Me</h1>
       <article class= "bio">
+        <img src= "./assets/images/selfie.jpg">
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quisquam eligendi 
           omnis rem molestias alias accusantium consequuntur esse ea similique laudantium 
           fuga, repudiandae magnam minus velit et, officia dolore earum debitis?
-        </p>  
-      </article>
+        </p>
+      </article>  
+      
     </div>
   </section>
 </body>
