just starting 'contact me'

--- a/index.html
+++ b/index.html
@@ -92,5 +92,15 @@
       </figure>
     </div>
   </section>
+
+  <footer>
+    <h1 id= "contact-me">Contact Me</h1>
+    <div>
+      <p>901.568.7941</p>
+      <p><a href="mailto:wlowrimore@gmail.com">Email Me</a></p>
+      <a href= "github.com/wlowrimore">GitHub</a>
+      <a href= "www.linkdin.com/in/william-lowrimore-21778310">LinkdIn</a>
+    </div>
+  </footer>
 </body>
 </html>
