--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
           <a href="https://github.com/wlowrimore" target="_blank">GitHub</a>
         </li>
         <li>
-          <a href="https://www.linkedin.com/in/william-lowrimore-21778310/" target="_blank">LinkedIn</a>
+          <a href="https://www.linkedin.com/in/william-lowrimore-21778310?trk=people-guest_people_search-card" target="_blank">LinkedIn</a>
         </li>
       </ul>
     </nav>
