adds project 'Once Upon a Time'

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
 
-<body>
+<body class="container-fluid">
   <header>
     <h1>William Lowrimore</h1>
-    <nav>
+    <nav class="d-flex">
       <!-- Unordered list -->
       <ul>
         <li>
@@ -56,21 +56,28 @@
   </section>
 
   <!-- my work section -->
-  <section class="assign-box">
+  <section class="assign-box col-lg-12">
     <h1 id="my-work">My Work</h1>
-    <div class="assign-box-images">
+    <div class="assign-box-images d-flex col-lg-12 col-md-6 col-sm-3">
       <div>
         <h2>Run Buddy<h2>
-            <div class="run-buddy img">
+            <div class="run-buddy img mr-12">
               <a href="https://wlowrimore.github.io/Run-Buddy/" target="_blank" rel="noreferrer">
                 <img src="assets/images/run-buddy.jpg" alt="run-buddy project website"></a>
             </div>
       </div>
       <div>
         <h2>Horiseon</h2>
-        <div class="horiseon img">
+        <div class="horiseon img mr-12">
           <a href="https://wlowrimore.github.io/vu-bc-12-2021-horiseon/" target="_blank" rel="noreferrer">
             <img src="assets/images/landing-page.png" alt="horiseon project website"></a>
+        </div>
+      </div>
+      <div>
+        <h2>Once Upon a Time<h2>
+        <div class="once-upon img mr-12">
+          <a href="https://coleheintzman.github.io/Bang-the-Drum/" target="_blank" rel="noreferrer">
+            <img src="assets/images/1nceUponATime.png" alt="Once Upon a Time Website"></a>
         </div>
       </div>
 
@@ -87,8 +94,14 @@
           https://github.com/wlowrimore/vu-bc-12-2021-horiseon</a>
         <a href="https://wlowrimore.github.io/vu-bc-12-2021-horiseon/" target="_blank" rel="noreferrer">
           https://wlowrimore.github.io/vu-bc-12-2021-horiseon/</a>
+
+        <h3>Once Upon a Time</h3>
+        <a href="https://github.com/ColeHeintzman/Bang-the-Drum" target="_blank" rel="noreferrer">
+          https://github.com/ColeHeintzman/Bang-the-Drum></a>
+        <a href="https://coleheintzman.github.io/Bang-the-Drum/" target="_bland" rel="noreferrer">
+          https://coleheintzman.github.io/Bang-the-Drum/</a>
       </div>
-      <div>
+
   </section>
 
   <!-- footer section -->
